tests/neg/splice-pat.check
-- [E032] Syntax Error: tests/neg/splice-pat.scala:12:16 ---------------------------------------------------------------
12 |  case '{ foo(${  // error: pattern expected
   |                ^
   |                pattern expected
   |
   | longer explanation available when compiling with `-explain`
-- [E040] Syntax Error: tests/neg/splice-pat.scala:15:5 ----------------------------------------------------------------
15 |    })} => ???  // error
   |     ^
   |     '=>' expected, but ')' found
